# sasrs

./: Cargo.toml  LICENSE-MIT  PLAN.md  PROGRESS.md  README.md
.claude/skills/sasrs-impl/: SKILL.md
src/: ast.rs  dataset.rs  error.rs  executor.rs  graphics.rs  lexer.rs  lib.rs  library.rs  listing.rs  log.rs  main.rs  missing.rs  ods_graphics.rs  preprocess.rs  session.rs  source.rs  token.rs  value.rs
src/datastep/: eval.rs  exec.rs  fastpath.rs  functions.rs  mod.rs  pdv.rs
src/formats/: builtin.rs  mod.rs  userdef.rs
src/graphics/: render.rs
src/macros/: control.rs  define.rs  error.rs  eval.rs  expand.rs  functions.rs  include.rs  mod.rs  quoting.rs  scan.rs  symbols.rs
src/output/: mod.rs
src/parser/: datastep.rs  expr.rs  global.rs  mod.rs
src/procs/: anova.rs  append.rs  catalog.rs  cluster.rs  common.rs  compare.rs  contents.rs  corr.rs  datasets.rs  discrim.rs  distance.rs  export.rs  factor.rs  fastclus.rs  format.rs  freq.rs  gchart.rs  genmod.rs  glimmix.rs  glm.rs  gplot.rs  iml.rs  import.rs  lincom.rs  logistic.rs  means.rs  mixed.rs  mod.rs  npar1way.rs  options.rs  plot.rs  princomp.rs  print.rs  printto.rs  rank.rs  reg.rs  report.rs  sgplot.rs  sort.rs  tabulate.rs  (+3 more)
src/sql/: ast.rs  dictionary.rs  mod.rs  parser.rs  plan.rs
src/stat/: dists.rs  linalg.rs  mod.rs
tests/: ods_html.rs  snapshot.rs
tests/common/: mod.rs
tests/fixtures/m1/: datastep_basic.sas  error_recovery.sas  set_filter.sas
tests/fixtures/m10/: by_group.sas  confint.sas  freq_chisq.sas  weight.sas
tests/fixtures/m11/: eval_if.sas  macro_loop.sas  symput.sas  sysfunc_autovars.sas
tests/fixtures/m12/: do_while.sas  quoting.sas
tests/fixtures/m14/: datalines.sas  import_export.sas  libname_csv.sas  put_report.sas  read_csv.sas
tests/fixtures/m15/: call_routines.sas  char_functions.sas  date_functions.sas  lag_dif_functions.sas  math_functions.sas  prob_functions.sas  rand_functions.sas
tests/fixtures/m16/: constructions.sas
tests/fixtures/m17/: hash.sas
tests/fixtures/m18/: formats.sas
tests/fixtures/m19/: macro_advanced.sas
tests/fixtures/m2/: do_array.sas  options_output.sas  retain_running.sas
tests/fixtures/m20/: dictionary.sas  views_update.sas
tests/fixtures/m21/: compare_report.sas  freq_stats.sas  rank_corr.sas  univariate_normal.sas
tests/fixtures/m22/: ods_html.sas  ods_options.sas  ods_output.sas
tests/fixtures/m23/: ods_excel.sas  ods_pdf.sas  ods_rtf.sas
tests/fixtures/m24/: npar1way.sas  ttest.sas
tests/fixtures/m25/: anova.sas  glm.sas  reg.sas
tests/fixtures/m26/: genmod.sas  logistic.sas
tests/fixtures/m27/: clustering.sas  discrim.sas  factor.sas  factor_varimax.sas  princomp.sas
tests/fixtures/m28/: glimmix.sas  mixed.sas
tests/fixtures/m28a/: iml_basic.sas  iml_linalg.sas
tests/fixtures/m29/: ods_graphics_basic.sas  sgplot_basic.sas  sgplot_univar_reg.sas
tests/fixtures/m3/: by_first_last.sas  merge_by.sas  sort_nodupkey.sas
tests/fixtures/m30/: gplot_gchart.sas  proc_plot.sas
tests/fixtures/m33/: contents_options.sas  datasets_options.sas  freq_options.sas  means_options.sas  print_options.sas  report_options.sas  sort_append_options.sas  tabulate_options.sas  univariate_weighted.sas
tests/fixtures/m34/: anova_twoway.sas  cluster_outtree.sas  corr_hoeffding.sas  corr_options.sas  factor_promax.sas  genmod_gamma_class.sas  glimmix_links_laplace.sas  glm_twoway.sas  iml_m34.sas  logistic_class_output.sas  logistic_links.sas  logistic_ordinal.sas  mixed_un_ar1.sas  npar1way_by_out.sas  npar1way_scores.sas  princomp_out.sas  (+3 more)
tests/snapshots/: snapshot__fixtures@datastep_basic.sas.snap  snapshot__fixtures@m10__by_group.sas.snap  snapshot__fixtures@m10__confint.sas.snap  snapshot__fixtures@m10__freq_chisq.sas.snap  snapshot__fixtures@m10__weight.sas.snap  snapshot__fixtures@m11__eval_if.sas.snap  snapshot__fixtures@m11__macro_loop.sas.snap  snapshot__fixtures@m11__symput.sas.snap  snapshot__fixtures@m11__sysfunc_autovars.sas.snap  snapshot__fixtures@m12__do_while.sas.snap  snapshot__fixtures@m12__quoting.sas.snap  snapshot__fixtures@m14__datalines.sas.snap  snapshot__fixtures@m14__import_export.sas.snap  snapshot__fixtures@m14__libname_csv.sas.snap  snapshot__fixtures@m14__put_report.sas.snap  snapshot__fixtures@m14__read_csv.sas.snap  snapshot__fixtures@m15__call_routines.sas.snap  snapshot__fixtures@m15__char_functions.sas.snap  snapshot__fixtures@m15__date_functions.sas.snap  snapshot__fixtures@m15__lag_dif_functions.sas.snap  snapshot__fixtures@m15__math_functions.sas.snap  snapshot__fixtures@m15__prob_functions.sas.snap  snapshot__fixtures@m15__rand_functions.sas.snap  snapshot__fixtures@m16__constructions.sas.snap  snapshot__fixtures@m17__hash.sas.snap  snapshot__fixtures@m18__formats.sas.snap  snapshot__fixtures@m19__macro_advanced.sas.snap  snapshot__fixtures@m19__sasautos__mylib.sas.snap  snapshot__fixtures@m1__error_recovery.sas.snap  snapshot__fixtures@m1__set_filter.sas.snap  snapshot__fixtures@m20__dictionary.sas.snap  snapshot__fixtures@m20__views_update.sas.snap  snapshot__fixtures@m21__compare_report.sas.snap  snapshot__fixtures@m21__freq_stats.sas.snap  snapshot__fixtures@m21__rank_corr.sas.snap  snapshot__fixtures@m21__univariate_normal.sas.snap  snapshot__fixtures@m22__ods_html.sas.snap  snapshot__fixtures@m22__ods_options.sas.snap  snapshot__fixtures@m22__ods_output.sas.snap  snapshot__fixtures@m23__ods_excel.sas.snap  (+89 more)
(+33 files in other folders)
