[package]
name = "sas_interpreter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sasrs"
path = "src/main.rs"

[features]
# M11.7 : le processeur macro (%let/&var, %macro/%mend, %if/%do, %eval,
# %sysfunc, %str/%nrstr, CALL SYMPUT/SYMGET) est désormais TOUJOURS ACTIF —
# il n'y a plus de feature `macros`. L'invariant byte-identical est porté par
# le fast-path identité de `MacroEngine::expand_open_code` (cf. src/preprocess.rs).
# Stub M8 : backend de stockage S3 (trait LibraryProvider sur scan parquet cloud).
# OFF par défaut, NON branché dans LibraryManager/LIBNAME ; activer avec
# --features s3. L'I/O cloud réelle demandera d'activer plus tard les features
# Polars `cloud`/`aws` (suite). Voir src/library.rs (module s3).
s3 = []

[dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "parquet",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "strings",
    "temporal",
    "round_series",
    "abs",
    "log",
    "cum_agg",
    "is_in",
    "cross_join",
    "semi_anti_join",
    "rank",
] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
