[package]
name = "sasrs"
version = "0.1.0"
edition = "2024"
description = "A SAS 9.4 language interpreter built on Polars"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LePhilippeDucTai/sasrs"
readme = "README.md"
keywords = ["sas", "interpreter", "polars", "data", "statistics"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "sasrs"
path = "src/main.rs"

[features]
# M11.7 : le processeur macro (%let/&var, %macro/%mend, %if/%do, %eval,
# %sysfunc, %str/%nrstr, CALL SYMPUT/SYMGET) est désormais TOUJOURS ACTIF —
# il n'y a plus de feature `macros`. L'invariant byte-identical est porté par
# le fast-path identité de `MacroEngine::expand_open_code` (cf. src/preprocess.rs).
# M13 : backend de stockage S3 (trait LibraryProvider sur scan parquet cloud),
# désormais RÉELLEMENT branché dans LibraryManager/LIBNAME (`libname x
# 's3://bucket/prefix';`). OFF par défaut — activer avec --features s3, ce qui
# tire les features Polars `cloud` + `aws` (object_store + aws-*). Ces features
# sont ADDITIVES : le build par défaut (sans `s3`) reste byte-identique car rien
# de tout cela n'est compilé. Voir src/library.rs (S3Library) et src/executor.rs
# (routage LIBNAME `s3://`).
s3 = ["polars/cloud", "polars/aws"]
# M29 : ODS GRAPHICS — génération d'images PNG/SVG via plotters.
# OFF par défaut : le build standard reste byte-identique (PROC SGPLOT émet une NOTE).
# Activer avec --features graphics pour la génération réelle.
graphics = ["dep:plotters"]

[dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "parquet",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "strings",
    "temporal",
    "round_series",
    "abs",
    "log",
    "cum_agg",
    "is_in",
    "cross_join",
    "semi_anti_join",
    "rank",
    "csv",
] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "line_series", "point_series", "ttf"], optional = true }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
